--- a/fll/index.html
+++ b/fll/index.html
@@ -94,13 +94,13 @@
 			</p>
 			<div class='YTContainer'>
 				<iframe id='YTChannel' src="https://www.youtube.com/embed/?listType=playlist&list=UUJP8htcgaZxm28hY3yX6WBw&autoplay=0" frameborder="0" allowfullscreen></iframe>
+				<!-- Instagram START -->
+				<script src="https://snapwidget.com/js/snapwidget.js"></script>
+				<iframe src="https://snapwidget.com/embed/591894" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe>
+				<!-- Instagram END -->
 				<div id='twitterContainer'>
 					<a class="twitter-timeline" data-lang="en" data-dnt="true" data-link-color="#ffc105" href="https://twitter.com/rs_blackthunder?ref_src=twsrc%5Etfw">Whoops! Something seems to have gone wrong! Click here to open our Twitter feed in a new tab.</a>
 				</div>
-				<!-- SnapWidget START -->
-				<script src="https://snapwidget.com/js/snapwidget.js"></script>
-				<iframe src="https://snapwidget.com/embed/591894" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe>
-				<!-- SnapWidget END -->
 				<noscript>
 					<a class='top-scroll-button' href="#top"><img alt='Scroll to top' src='/graphics/arrow.png'/></a>
 				</noscript>
