Rebrand copyright notice to Black Thunder

--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -42,7 +42,7 @@
 			</h1>
 			<p>
 				A cookie is a small text file which is automatically saved on your computer when you visit our website, and is used to
-				help track activity across a website. We (Black Thunder FLL) use cookies on our website for the following purposes:
+				help track activity across a website. We (Black Thunder) use cookies on our website for the following purposes:
 			</p>
 			<ul>
 				<li>Google Analytics, to help provide anonymous web analytics for our website - see more <a href="https://developers.google.com/analytics/devguides/collection/analyticsjs/cookie-usage">here</a>;</li>
@@ -67,7 +67,7 @@
 				If you are unsure what Javascript is, or have not disabled it, you are probably viewing this page on an older computer, in which case please upgrade to a newer device.
 			</noscript>
 			<footer>
-				&copy; Copyright Black Thunder FLL 2018
+				&copy; Copyright Black Thunder 2018
 			</footer>
 		</main>
 	</body>
