--- a/fll/index.html
+++ b/fll/index.html
@@ -107,7 +107,7 @@
 				</noscript>
 				<a href="javascript:scrollUp()" class='top-scroll-button'><img alt='Scroll to top' src='/graphics/arrow.png'/></a>
 				<footer>
-					&copy; Copyright Black Thunder FLL 2018 | <a href="/privacy-policy">Privacy Policy</a>
+					&copy; Copyright Black Thunder 2018 | <a href="/privacy-policy">Privacy Policy</a>
 				</footer>
 			</div>
 		</main>
