--- a/index.html
+++ b/index.html
@@ -1,7 +1,111 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Black Thunder</title>
-        <meta http-equiv="refresh" content="0; URL=/fll">
-    </head>
+	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics  START-->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-124482375-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-124482375-1');
+		</script>
+		<!-- Global site tag (gtag.js) - Google Analytics  END-->
+
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link href="/assets/montserrat.css" rel="stylesheet">
+		<title>Black Thunder</title>
+		<meta charset="utf-8"/>
+		<meta name="description" content="Black Thunder: a robotics club from Reading School, UK that competes in the FLL & Pi Wars">
+		<meta name='author' content='Black Thunder'/>
+		<link rel="shortcut icon" href="/graphics/logo-round.ico" />
+		<script src="/assets/jquery-3.2.1.min.js"></script>
+		<script src='/assets/home.js'></script>
+		<script src="/assets/cookies.js"></script>
+		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a604622fcaa9380"></script>
+		<link rel="stylesheet" type="text/css" href="/assets/home.css">
+		<link rel="stylesheet" type="text/css" href="/assets/global.css">
+		<script>
+			// CHECK COOKIE POLICY HAS BEEN ACCEPTED //
+			if(Cookies.get("blackThunderCookiePolicy__Accepted") != "true") {
+				window.location = "/cookie-splash"
+			}
+			// END OF COOKIE POLICY CHECK //
+
+			// SCROLL UP BUTTON START //
+			$(window).scroll(function() {
+				if ($(this).scrollTop() >= 50) {
+					$('.top-scroll-button').fadeIn(500);
+				}
+				if ($(this).scrollTop() < 50) {
+					$('.top-scroll-button').fadeOut(500);
+				}
+			});
+			function scrollUp() {
+				$('body,html').animate({
+					scrollTop : 0
+				}, 500);
+			}
+			// SCROLL UP BUTTON END //
+		</script>
+	</head>
+	<body>
+		<a id="top"></a>
+		<div id='nav'>
+			<a href="/" style="text-decoration: none;">
+				<nav>
+					<img class='nameplate' src='/graphics/nameplate-thick.png'>
+					<img class='logo1' src='/graphics/logoleft.png'>
+					<img class='logo2' src='/graphics/logo.png'>
+				</nav>
+                <div class='nav-fade'>
+                    <a class="one" href="/">Home</a><!--
+                  --><a class="two" href="/fll">FLL</a><!--
+                  --><a class="three" href="/pi-wars">Pi Wars</a><!--
+                  --><a class="four" href="/blog">Blog</a>
+                  <hr/>
+                </div>
+			</a>
+		</div>
+		<main>
+			<h1 id="title">
+				<noscript>
+					Welcome
+				</noscript>
+			</h1>
+			<p id='mainContent'>
+				<span>
+					We are Black Thunder: a robotics club from Reading School, UK. We are a group of around 40 11-16 year olds who enjoy robotics, and meet each Friday after school, to work on robot-related tasks, including the FIRST LEGO League and Pi Wars.
+				</span>
+				<br>
+				<br>
+				<span>
+					We have a blog, <a href="https://www.youtube.com/channel/UCJP8htcgaZxm28hY3yX6WBw">YouTube channel</a> and <a href="https://www.instagram.com/rs_blackthunder">Instagram</a> & <a href="https://www.twitter.com/rs_blackthunder">Twitter</a> feeds; please follow and subscribe to us. Our social media handle is rs_blackthunder. We have embedded these feeds below.
+				</span>
+				<br>
+				<br>
+				<span>
+					To contact us, please email us at <a href="mailto:contact@blackthunder.ga">contact@blackthunder.ga</a>.
+				</span>
+			</p>
+			<div class='YTContainer'>
+				<iframe id='YTChannel' src="https://www.youtube.com/embed/?listType=playlist&list=UUJP8htcgaZxm28hY3yX6WBw&autoplay=0" frameborder="0" allowfullscreen></iframe>
+				<!-- Instagram START -->
+                <h3>Instagram Feed: <a href="instagram.com/rs_blackthunder">@rs_blackthunder</a></h3>
+				<div id="pixlee_container"></div>
+				<!-- Instagram END -->
+				<div id='twitterContainer'>
+					<a class="twitter-timeline" data-lang="en" data-dnt="true" data-link-color="#ffc105" href="https://twitter.com/rs_blackthunder?ref_src=twsrc%5Etfw">Whoops! Something seems to have gone wrong! Click here to open our Twitter feed in a new tab.</a>
+				</div>
+				<noscript>
+					<a class='top-scroll-button' href="#top"><img alt='Scroll to top' src='/graphics/arrow.png'/></a>
+				</noscript>
+				<a href="javascript:scrollUp()" class='top-scroll-button'><img alt='Scroll to top' src='/graphics/arrow.png'/></a>
+				<footer>
+					&copy; Copyright Black Thunder 2018 | <a href="/privacy-policy">Privacy Policy</a>
+				</footer>
+			</div>
+		</main>
+	</body>
 </html>
