--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -28,10 +28,10 @@
 					<img class='logo2' src='/graphics/logo.png'>
 				</nav>
 				<div class='nav-fade'>
-                    <a class="one" href="/fll">FLL</a><!--
-                  --><a class="two" href="/pi-wars">Pi Wars</a><!--
-                  --><a class="three" href="https://blog.blackthunder.ga">Blog</a><!--
-                  --><a class="four" href="/privacy-policy">Privacy Policy</a>
+                    <a class="one" href="/">Home</a><!--
+                  --><a class="two" href="/fll">FLL</a><!--
+                  --><a class="three" href="/pi-wars">Pi Wars</a><!--
+                  --><a class="four" href="/blog">Blog</a>
                   <hr/>
                 </div>
 			</a>
