--- a/fll/index.html
+++ b/fll/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>FLL | Black Thunder</title>
-        <meta http-equiv="refresh" content="0; URL=blog.blackthunder.ga/search?q=FLL">
+        <meta http-equiv="refresh" content="0; URL=https://blog.blackthunder.ga/search?q=FLL">
     </head>
     <body style="text-align: center;">
-        You should be redirected to our FLL page within 5 seconds. If this doesn't happen, please click <a href="blog.blackthunder.ga/search?q=FLL">here</a>.
+        You should be redirected to our FLL page within 5 seconds. If this doesn't happen, please click <a href="https://blog.blackthunder.ga/search?q=FLL">here</a>.
     </body>
 </html>
