--- a/pi-wars/index.html
+++ b/pi-wars/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>Pi Wars | Black Thunder</title>
-        <meta http-equiv="refresh" content="0; URL=blog.blackthunder.ga/search?q=Pi%20Wars">
+        <meta http-equiv="refresh" content="0; URL=https://blog.blackthunder.ga/search?q=Pi%20Wars">
     </head>
     <body style="text-align: center;">
-        You should be redirected to our Pi Wars page within 5 seconds. If this doesn't happen, please click <a href="blog.blackthunder.ga/search?q=Pi%20Wars">here</a>.
+        You should be redirected to our Pi Wars page within 5 seconds. If this doesn't happen, please click <a href="https://blog.blackthunder.ga/search?q=Pi%20Wars">here</a>.
     </body>
 </html>
