Make navbar links work faster

--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -28,9 +28,9 @@
 				</nav>
 				<div class='nav-fade'>
                     <a class="one" href="/">Home</a><!--
-                  --><a class="two" href="/fll">FLL</a><!--
-                  --><a class="three" href="/pi-wars">Pi Wars</a><!--
-                  --><a class="four" href="/blog">Blog</a>
+                  --><a class="two" href="https://blog.blackthunder.ga/search?q=FLL">FLL</a><!--
+                  --><a class="three" href="https://blog.blackthunder.ga/search?q=Pi%20Wars">Pi Wars</a><!--
+                  --><a class="four" href="https://blog.blackthunder.ga">Blog</a>
                   <hr/>
                 </div>
 			</a>
