Make IG feed work

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				<iframe id='YTChannel' src="https://www.youtube.com/embed/?listType=playlist&list=UUJP8htcgaZxm28hY3yX6WBw&autoplay=0" frameborder="0" allowfullscreen></iframe>
 				<!-- Instagram START -->
                 <h3>Instagram Feed: <a href="instagram.com/rs_blackthunder">@rs_blackthunder</a></h3>
-				<div id="pixlee_container"></div>
+				<div id="pixlee_container"></div><script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'dBWiunOsB0vF9i2hnq'});Pixlee.addSimpleWidget({widgetId:'8421'});};</script><script src="//instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
 				<!-- Instagram END -->
 				<div id='twitterContainer'>
 					<a class="twitter-timeline" data-lang="en" data-dnt="true" data-link-color="#ffc105" href="https://twitter.com/rs_blackthunder?ref_src=twsrc%5Etfw">Whoops! Something seems to have gone wrong! Click here to open our Twitter feed in a new tab.</a>
@@ -103,7 +103,7 @@
 				</noscript>
 				<a href="javascript:scrollUp()" class='top-scroll-button'><img alt='Scroll to top' src='/graphics/arrow.png'/></a>
 				<footer>
-					&copy; Copyright Black Thunder 2018 | <a href="/privacy-policy">Privacy Policy</a>
+					Made by <a href="https://matthew-grove.ml">Matthew Grove</a> |&copy; Copyright Black Thunder 2018 | <a href="/privacy-policy">Privacy Policy</a>
 				</footer>
 			</div>
 		</main>
