--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -67,7 +67,7 @@
 				If you are unsure what Javascript is, or have not disabled it, you are probably viewing this page on an older computer, in which case please upgrade to a newer device.
 			</noscript>
 			<footer>
-				&copy; Copyright Black Thunder 2018
+				Made by <a href="https://matthew-grove.ml">Matthew Grove</a> |&copy; Copyright Black Thunder 2018
 			</footer>
 		</main>
 	</body>
