--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			<div class='YTContainer'>
 				<iframe id='YTChannel' src="https://www.youtube.com/embed/?listType=playlist&list=UUJP8htcgaZxm28hY3yX6WBw&autoplay=0" frameborder="0" allowfullscreen></iframe>
 				<!-- Instagram START -->
-                <h3>Instagram Feed: <a href="instagram.com/rs_blackthunder">@rs_blackthunder</a></h3>
+                <h3>Instagram Feed: <a href="https://instagram.com/rs_blackthunder">@rs_blackthunder</a></h3>
 				<div id="pixlee_container"></div><script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'dBWiunOsB0vF9i2hnq'});Pixlee.addSimpleWidget({widgetId:'8421'});};</script><script src="//instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
 				<!-- Instagram END -->
 				<div id='twitterContainer'>
