Use new nameplate

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<div id='nav'>
 			<a href="/" style="text-decoration: none;">
 				<nav>
-					<img class='nameplate' src='/graphics/nameplate-thick.png'>
+					<img class='nameplate' src='/graphics/nameplate.png'>
 					<img class='logo1' src='/graphics/logoleft.png'>
 					<img class='logo2' src='/graphics/logo.png'>
 				</nav>
