--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -23,7 +23,7 @@
 		<div id='nav'>
 			<a href="/" style="text-decoration: none;">
 				<nav>
-					<img class='nameplate' src='/graphics/nameplate-thick.png'>
+					<img class='nameplate' src='/graphics/nameplat.png'>
 					<img class='logo1' src='/graphics/logoleft.png'>
 					<img class='logo2' src='/graphics/logo.png'>
 				</nav>
