--- a/cookie-splash/index.html
+++ b/cookie-splash/index.html
@@ -32,7 +32,7 @@
 		<div id='nav'>
 			<a href="/" style="text-decoration: none;">
 				<nav>
-					<img class='nameplate' src='/graphics/nameplat.png'>
+					<img class='nameplate' src='/graphics/nameplate.png'>
 					<img class='logo1' src='/graphics/logoleft.png'>
 					<img class='logo2' src='/graphics/logo.png'>
 				</nav>
