Change text in main body

--- a/cookie-splash/index.html
+++ b/cookie-splash/index.html
@@ -51,7 +51,7 @@
 					We Use Cookies on Our Site
 				</h1>
 				<p>
-					By continuing to use this site, you agree to the use of cookies from AddThis, Google Analytics, and Black Thunder FLL.
+					By continuing to use this site, you agree to the use of cookies from AddThis, Google Analytics, and Black Thunder.
 				</p>
 				<button class="button button-enabled" onclick="acceptCookies()">Agree</button>
 				<a class="button button-enabled" href="/privacy-policy">Privacy Policy</a>
