Fix typo in content

--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -63,7 +63,7 @@
 			<br>
 			<button class="button script-only" onclick="removeCookies();changeButtonContent();" style="cursor:not-allowed;">You haven't accepted cookies</button>
 			<noscript>
-				If you have already accepted cookies, you are able to chang your mind. However, JavaScript must be enabled - and it isn't. Therefore, if you have disabled JavaScript, please re-enable it.
+				If you have already accepted cookies, you are able to change your mind. However, JavaScript must be enabled - and it isn't. Therefore, if you have disabled JavaScript, please re-enable it.
 				If you are unsure what Javascript is, or have not disabled it, you are probably viewing this page on an older computer, in which case please upgrade to a newer device.
 			</noscript>
 			<footer>
