--- a/cookie-splash/index.html
+++ b/cookie-splash/index.html
@@ -37,10 +37,10 @@
 					<img class='logo2' src='/graphics/logo.png'>
 				</nav>
 				<div class='nav-fade'>
-                    <a class="one" href="/fll">FLL</a><!--
-                  --><a class="two" href="/pi-wars">Pi Wars</a><!--
-                  --><a class="three" href="https://blog.blackthunder.ga">Blog</a><!--
-                  --><a class="four" href="/privacy-policy">Privacy Policy</a>
+                    <a class="one" href="/">Home</a><!--
+                  --><a class="two" href="https://blog.blackthunder.ga/search?q=FLL">FLL</a><!--
+                  --><a class="three" href="https://blog.blackthunder.ga/search?q=Pi%20Wars">Pi Wars</a><!--
+                  --><a class="four" href="https://blog.blackthunder.ga">Blog</a>
                   <hr/>
                 </div>
 			</a>
