Remove website & redirect to blog
This website is not needed; all content is now on our blog (https://blog.blackthunder.ga)

--- a/github/index.html
+++ b/github/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="refresh" content="0; url=https://www.github.com/blackthunderfll/"/>
-		<link href="/assets/roboto-mono.css" rel="stylesheet">
+        <meta http-equiv="refresh" content="0; url=https://www.github.com/rs_blackthunder/"/>
     </head>
     <body>
-        <p style="font-family:'Roboto Mono';text-align:center;">
+        <p>
             You should be redirected to our GitHub page within 5 seconds.
 			<br>
 			<br>
-			If this does not happen, please click <a href="https://www.github.com/blackthunderfll/">here</a>, or go to <a href="https://www.github.com/blackthunderfll/">https://www.github.com/blackthunderfll/</a>.
+			If this does not happen, please click <a href="https://www.github.com/rs_blackthunder/">here</a>, or go to <a href="https://www.github.com/blackthunderfll/">https://www.github.com/blackthunderfll/</a>.
         </p>
     </body>
 </html>
