--- a/index.html
+++ b/index.html
@@ -1,111 +1,18 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
-	<head>
-		<!-- Global site tag (gtag.js) - Google Analytics  START-->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-124482375-1"></script>
-		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
-
-		  gtag('config', 'UA-124482375-1');
-		</script>
-		<!-- Global site tag (gtag.js) - Google Analytics  END-->
-
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href="/assets/montserrat.css" rel="stylesheet">
-		<title>Black Thunder</title>
-		<meta charset="utf-8"/>
-		<meta name="description" content="Black Thunder: a robotics club from Reading School, UK that competes in the FLL & Pi Wars">
-		<meta name='author' content='Black Thunder'/>
-		<link rel="shortcut icon" href="/graphics/logo-round.ico" />
-		<script src="/assets/jquery-3.2.1.min.js"></script>
-		<script src='/assets/home.js'></script>
-		<script src="/assets/cookies.js"></script>
-		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a604622fcaa9380"></script>
-		<link rel="stylesheet" type="text/css" href="/assets/home.css">
-		<link rel="stylesheet" type="text/css" href="/assets/global.css">
-		<script>
-			// CHECK COOKIE POLICY HAS BEEN ACCEPTED //
-			if(Cookies.get("blackThunderCookiePolicy__Accepted") != "true") {
-				window.location = "/cookie-splash"
-			}
-			// END OF COOKIE POLICY CHECK //
-
-			// SCROLL UP BUTTON START //
-			$(window).scroll(function() {
-				if ($(this).scrollTop() >= 50) {
-					$('.top-scroll-button').fadeIn(500);
-				}
-				if ($(this).scrollTop() < 50) {
-					$('.top-scroll-button').fadeOut(500);
-				}
-			});
-			function scrollUp() {
-				$('body,html').animate({
-					scrollTop : 0
-				}, 500);
-			}
-			// SCROLL UP BUTTON END //
-		</script>
-	</head>
-	<body>
-		<a id="top"></a>
-		<div id='nav'>
-			<a href="/" style="text-decoration: none;">
-				<nav>
-					<img class='nameplate' src='/graphics/nameplate.png'>
-					<img class='logo1' src='/graphics/logoleft.png'>
-					<img class='logo2' src='/graphics/logo.png'>
-				</nav>
-                <div class='nav-fade'>
-                    <a class="one" href="/">Home</a><!--
-                  --><a class="two" href="https://blog.blackthunder.ga/search?q=FLL">FLL</a><!--
-                  --><a class="three" href="https://blog.blackthunder.ga/search?q=Pi%20Wars">Pi Wars</a><!--
-                  --><a class="four" href="https://blog.blackthunder.ga">Blog</a>
-                  <hr/>
-                </div>
-			</a>
-		</div>
-		<main>
-			<h1 id="title">
-				<noscript>
-					Welcome
-				</noscript>
-			</h1>
-			<p id='mainContent'>
-				<span>
-					We are Black Thunder: a robotics club from Reading School, UK. We are a group of around 40 11-16 year olds who enjoy robotics, and meet each Friday after school, to work on robot-related tasks, including the FIRST LEGO League and Pi Wars.
-				</span>
-				<br>
-				<br>
-				<span>
-					We have a blog, <a href="https://www.youtube.com/channel/UCJP8htcgaZxm28hY3yX6WBw">YouTube channel</a> and <a href="https://www.instagram.com/rs_blackthunder">Instagram</a> & <a href="https://www.twitter.com/rs_blackthunder">Twitter</a> feeds; please follow and subscribe to us. Our social media handle is rs_blackthunder. We have embedded these feeds below.
-				</span>
-				<br>
-				<br>
-				<span>
-					To contact us, please email us at <a href="mailto:contact@blackthunder.ga">contact@blackthunder.ga</a>.
-				</span>
-			</p>
-			<div class='YTContainer'>
-				<iframe id='YTChannel' src="https://www.youtube.com/embed/?listType=playlist&list=UUJP8htcgaZxm28hY3yX6WBw&autoplay=0" frameborder="0" allowfullscreen></iframe>
-				<!-- Instagram START -->
-                <h3>Instagram Feed: <a href="https://instagram.com/rs_blackthunder">@rs_blackthunder</a></h3>
-				<div id="pixlee_container"></div><script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'dBWiunOsB0vF9i2hnq'});Pixlee.addSimpleWidget({widgetId:'8421'});};</script><script src="//instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
-				<!-- Instagram END -->
-				<div id='twitterContainer'>
-					<a class="twitter-timeline" data-lang="en" data-dnt="true" data-link-color="#ffc105" href="https://twitter.com/rs_blackthunder?ref_src=twsrc%5Etfw">Whoops! Something seems to have gone wrong! Click here to open our Twitter feed in a new tab.</a>
-				</div>
-				<noscript>
-					<a class='top-scroll-button' href="#top"><img alt='Scroll to top' src='/graphics/arrow.png'/></a>
-				</noscript>
-				<a href="javascript:scrollUp()" class='top-scroll-button'><img alt='Scroll to top' src='/graphics/arrow.png'/></a>
-				<footer>
-					Made by <a href="https://matthew-grove.ml">Matthew Grove</a> | &copy; Copyright Black Thunder 2018 | <a href="/privacy-policy">Privacy Policy</a>
-				</footer>
-			</div>
-		</main>
-	</body>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Error 404 | Black Thunder</title>
+    <meta http-equiv="refresh" content="0; URL=https://blog.blackthunder.ga/">
+    <meta name="description" content="Black Thunder: a robotics club from Reading School, UK that competes in the FLL, Student Robotics & Pi Wars">
+    <meta name='author' content='Black Thunder' />
+    <link rel="shortcut icon" href="/graphics/logo-round.ico" />
+</head>
+<body style="text-align: center;">
+    <h1>Error 404 | Page Not Found</h1>
+    <p>
+        You should be redirected to our blog within 5 seconds. If this doesn't happen, please click <a href="https://blog.blackthunder.ga/">here</a>.
+    </p>
+</body>
 </html>
