--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Error 404 | Black Thunder</title>
+    <title>Black Thunder</title>
     <meta http-equiv="refresh" content="0; URL=https://blog.blackthunder.ga/">
     <meta name="description" content="Black Thunder: a robotics club from Reading School, UK that competes in the FLL, Student Robotics & Pi Wars">
     <meta name='author' content='Black Thunder' />
